# catoolbox

./: .editorconfig  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  catoolbox_internal.h  catoolboxconfig.h.in
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: standard_pull_request.md
cacli/: CMakeLists.txt  cacli.exe.manifest.in  cacli.rc.in
cacli/src/: CMakeLists.txt  main.c  stdafx.h
cmake/: CAToolboxConfig.cmake.in  CopyDependencyForTarget.cmake  ExportHeaderWithMaps.h.in
cmake/Modules/: AddCAToolboxTest.cmake  DisableMSVCDefaultManifest.cmake  GenerateExportHeaderWithMap.cmake  SetTargetDebugSecurityFlags.cmake
libcatoolbox/: CMakeLists.txt  libcatoolbox.def.in  libcatoolbox.dll.manifest.in  libcatoolbox.map  libcatoolbox.pc.in  libcatoolbox.rc.in
libcatoolbox/include/catoolbox/: catoolbox.h  errcodes.h  gccattributes.h  salannotations.h  version.h
libcatoolbox/src/: stdafx.h  version.c
libcatoolbox/tests/: test_version.c
